# fluffy-octo-fiesta

./: .editorconfig  .gitignore  .pnp.cjs  .swcrc  .yarnrc.yml  Cargo.toml  README.md  package.json  swc_plugin_de_indent_template_literal.wasm  tsconfig.json
.devcontainer/: devcontainer.json
plugin/: Cargo.toml
plugin/src/: lib.rs
src/: index.ts  lib.rs  utils.rs  visitor.rs
tests/: fixture.rs  js_fixture.rs  raw_fixture.rs  ts_fixture.rs
tests/fixture/inside_function/: input.js  output.js
tests/fixture/js/PortalCompatProvider/: input.ts  output.ts
tests/fixture/js/SRRContext/: input.ts
tests/fixture/js/clamp/: input.ts  output.ts
tests/fixture/js/getReactCallbackName/: input.ts
tests/fixture/js/no_comment/: output.js
tests/fixture/js/removeStorybookParameters/: input.ts  output.ts
tests/fixture/js/slot/: input.ts  output.ts
tests/fixture/js/useControllableState/: input.ts  output.ts
tests/fixture/js/useDialog/: input.ts  output.ts
tests/fixture/js/useFluentProvider/: input.ts  output.ts
tests/fixture/js/useFluentProviderThemeStyleTag/: input.ts  output.ts
tests/fixture/js/useFocusFirstElement/: input.ts  output.ts
tests/fixture/js/useInput/: input.ts  output.ts
tests/fixture/js/usePositioning/: input.ts  output.ts
tests/fixture/raw/PortalCompatProvider/: input.txt
tests/fixture/raw/SRRContext/: input.txt  output.txt
tests/fixture/raw/getReactCallbackName/: input.txt
tests/fixture/raw/multiline/: input.txt  output.txt
tests/fixture/raw/multiline_with_trailing_lines/: input.txt  output.txt
tests/fixture/tab/slot/: input.txt
(+101 files in other folders)
